# pic-image-api

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
config/: api.toml  server.toml
src/: main.rs
src/middleware/: access_log.rs  logger.rs  mod.rs
src/router/: mod.rs
src/router/admin/: api.rs  mod.rs  status.rs
src/router/api/: image.rs  mod.rs
src/utils/: config.rs  error.rs  file.rs  image.rs  json.rs  mod.rs
web/: farm.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
web/src/: App.tsx  index.tsx  router.ts
web/src/pages/: home.tsx
