[package]
name = "pic-image-api"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4" }
tracing-subscriber = { version = "0.3", features = ["chrono"] }
tracing = { version = "0.1.41" }
owo-colors = { version = "4.2"}
tracing-log = { version ="0.2.0" }
chrono-tz = { version = "0.10.4" }
log = { version = "0.4.27" }
actix-web = { version = "4.11.0" }
dotenv = { version = "0.15.0" }
tokio = { version = "1.47.1", features = ["fs"] }
thiserror = { version = "2.0.12" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
rand = { version = "0.9.2" }
infer = { version = "0.19.0" }
tracing-appender = "0.2.3"
futures-util = { version = "0.3.31" }
rust-embed = { version = "8.7.2", features = ["actix-web"]}
mime-infer = "4.0.0"
actix-files = { version = "0.6.6" }
toml = "0.9.5"

[lints.clippy]
uninlined_format_args = "allow"
